# dpa-06-python

./: .gitattributes  .gitignore  LICENSE  README.md  _check_device.py  csv_utils.py  dpa06.py  ftdi_comm.py  packet_parser.py  pyproject.toml  requirements.txt  test_ext_trig.py  test_initial_connect.py  test_measure.py  test_measure_csv.py  test_packet_parser.py  test_read_parameters.py  test_robot_mode.py  test_set_frequency.py  test_zero.py
