[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dpa-06-python"
version = "0.1.0"
description = "Python library for the TEC GIHAN DPA-06 6-axis force sensor amplifier (FTDI D2XX / USB)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [{ name = "TEC Gihan Co., Ltd." }]
keywords = ["DPA-06", "TEC GIHAN", "force sensor", "FTDI", "D2XX", "6-axis"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "ftd2xx>=1.3.3",
    "numpy>=1.20.0",
]

[project.urls]
Homepage = "https://github.com/tecgihan/dpa-06-python"

[tool.setuptools]
py-modules = ["dpa06", "ftdi_comm", "packet_parser", "csv_utils"]
